# bogdanfloris.com

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  flake.nix  fly.toml  package-lock.json  package.json  tailwind.config.js
blog_posts/: personal-website-rust.md  personal_website_blog.html  test_blog_post.html
docs/superpowers/plans/: 2026-04-20-website-revamp.md
docs/superpowers/specs/: 2026-04-20-website-revamp-design.md
src/: blog.rs  content.rs  main.rs  rss.rs  style.css
templates/: 404.html  about.html  base.html  blog.html  blog_post.html  index.html  resume.html
templates/partials/: banner.html  footer.html  letterhead.html  nav.html  resume-body.html  theme-button.html
