[package]
name = "bogdanfloris-com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.18", features = ["macros"]}
cargo-watch = "8.4.0"
chrono = "0.4.38"
serde = { version = "1.0.167", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[profile.release]
debug = true

[lib]
name = "blog"
path = "src/blog.rs"

[[bin]]
name = "bogdanfloris-com"
path = "src/main.rs"
